<resources>
    <string name="app_name">Bar Bro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="error_message">Error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Refresh</string>
    <string name="search_drink_string">Search List</string>
    <string name="view_drink">View Drink</string>
    <string name="liquor_prompt">Pick a Liquor</string>
    <string name="new_drink_hint">Enter New Drink Name</string>
    <string name="new_ingredient_hint">Enter Ingredients</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="submit_new_drink">Submit</string>
    <string name="cancel_edit">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="pick_flavor">Pick Your Flavor</string>
    <string-array name="liquor_array">
        <item>Vodka</item>
        <item>Gin</item>
        <item>Tequila</item>
        <item>Whisky</item>
        <item>Rum</item>
        <item>Brandy</item>
        <item>Liqueur</item>
        <item>Sweet</item>
        <item>Fruity</item>
        <item>Sour</item>
        <item>Popular</item>
        <item>Party</item>
        <item>Classic</item>
    </string-array>
    <string-array name="taste_array">
        <item>Sweet</item>
        <item>Fruity</item>
        <item>Berry</item>
        <item>Sour</item>
        <item>Herb</item>
        <item>Spicy</item>
        <item>Fresh</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="searchweb">Search Web</string>
    <string name="edit_drink">Edit Drink</string>
    <string name="delete">Delete</string>
    <string name="closex">closex</string>
    <string name="favorite">favorite</string>
</resources>
